# orchestra

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  benchmark_demo.py  out.txt  pyproject.toml  requirements.txt  setup.py  test_output.txt  test_prod.db  test_recorder_manual.py
.agent/workflows/: deploy_to_pypi.md
.orchestra/: traces.db
benchmarks/: langgraph_benchmark.py
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT.md
examples/: cost_comparison.py  langchain_quickstart.py  langgraph_quickstart.py  mcp_tool_search_example.py
examples/config_agent/: agent.yaml  run.py  servers.yaml
k8s/: deployment.yaml  service.yaml
load_tests/: README.md  locustfile.py
orchestra/: __init__.py  _version.py  cli.py  configuration.py  lifecycle.py
orchestra/adapters/: __init__.py  base.py  langchain.py  langgraph.py
orchestra/agent/: __init__.py  builder.py
orchestra/core/: cache_manager.py  compression.py  embeddings.py  hierarchical_embeddings.py  metrics.py  redis_store.py  semantic_store.py
orchestra/eval/: __init__.py  asserts.py
orchestra/llm/: __init__.py  factory.py
orchestra/mcp/: __init__.py  client.py  registry.py  tools.py
orchestra/migration/: checkpointer.py  registry.py
orchestra/monitoring/: __init__.py  health.py  metrics.py
orchestra/recorder/: base.py  event_listener.py  logger.py  storage.py
orchestra/resilience/: __init__.py  circuit_breaker.py
tests/: conftest.py  test_eval.py  test_recorder_production.py  test_self_rag.py
tests/test_adapters/: test_langchain.py  test_langgraph.py
tests/test_mcp/: __init__.py  (+1 more)
(+2 files in other folders)
